--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,6 @@
 yarnPath: ".yarn/releases/yarn-berry.cjs"
+
+npmScopes:
+  yogiyo:
+    npmAuthToken: "${GITHUB_TOKEN}"
+    npmRegistryServer: "https://npm.pkg.github.com"
