--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,6 @@
 yarnPath: ".yarn/releases/yarn-berry.cjs"
 
 npmScopes:
-  yogiyo:
+  sekyungkim-dhk:
     npmAuthToken: "${GITHUB_TOKEN}"
     npmRegistryServer: "https://npm.pkg.github.com"
