--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "parcel-package",
+  "name": "@sekyungkim-dhk/parcel-package",
+  "version": "0.0.1",
   "source": "src/index.ts",
   "main": "dist/main.js",
   "module": "dist/module.js",
