--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
 name: Release Drafter
 
 on:
-  label:
-    types: [created]
+  pull_request:
+    types: [labeled]
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Run a one-line script
+        run: echo Hello, world!
